--- a/.docker/busybox/Dockerfile
+++ b/.docker/busybox/Dockerfile
@@ -1,5 +1,5 @@
 FROM busybox
 
-ADD getter_script.sh /getter_script.sh
+COPY .docker/busybox/getter_script.sh /getter_script.sh
 RUN chmod a+x /getter_script.sh
 CMD ["/getter_script.sh"]
