--- a/cloudbuild-prod.yaml
+++ b/cloudbuild-prod.yaml
@@ -20,19 +20,19 @@ steps:
   - id: 'Build image docker'  
     name: 'gcr.io/cloud-builders/docker'
     entrypoint: 'bash'
-    args: ['-c', 'docker build -t ${_USERNAME}/${_REPOSITORY}:${SHORT_SHA} -f .docker/go/Dockerfile .']
+    args: ['-c', 'docker build -t ${_USERNAME}/${_REPOSITORY}:${_TAG} -f .docker/go/Dockerfile .']
 
   - id: 'Push image docker'   
     name: 'gcr.io/cloud-builders/docker'
     entrypoint: 'bash'
-    args: ['-c', 'docker push ${_USERNAME}/${_REPOSITORY}:${SHORT_SHA}']
+    args: ['-c', 'docker push ${_USERNAME}/${_REPOSITORY}:${_TAG}']
     
   - id: 'Adjust deployment'
     name: 'gcr.io/cloud-builders/docker'
     entrypoint: 'bash'
     args:
       - '-c'
-      - 'sed s#${_USERNAME}/${_REPOSITORY}#${_USERNAME}/${_REPOSITORY}:${SHORT_SHA}}#g k8s/go/deployment.yml > k8s/go/deployment_prod.yml'
+      - 'sed s#${_USERNAME}/${_REPOSITORY}#${_USERNAME}/${_REPOSITORY}:${_TAG}}#g k8s/go/deployment.yml > k8s/go/deployment_prod.yml'
       - 'cat k8s/go/deployment_prod.yml'
 
   - id: 'Deploy k8s'
